tests/baselines/reference/recursiveTypeParameterConstraintReferenceLacksTypeArgs.errors.txt
==== tests/cases/compiler/recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts (1 errors) ====
    class A<T extends A> { }
                      ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).